--- a/server/src/main/twirl/app.scala.html
+++ b/server/src/main/twirl/app.scala.html
@@ -1,4 +1,4 @@
-@(scriptUrl: Option[String])(implicit config: play.api.Configuration)
+@()(implicit config: play.api.Configuration)
 <!DOCTYPE html>
 
 <html>
@@ -14,6 +14,6 @@
   <body>
        <div id="root">
        </div>
-       <script src=@scriptUrl></script>
+       @scalajs.html.scripts(projectName = "client", name => routes.Assets.versioned(name).toString, name => getClass.getResource(s"/public/$name") != null)
   </body>
 </html>
