--- a/server/src/main/twirl/app.scala.html
+++ b/server/src/main/twirl/app.scala.html
@@ -10,6 +10,7 @@
     <link href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">*@
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.min.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/appmain.css")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap-datepicker/css/bootstrap-datepicker.min.css")">
     <link href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/ionicons.min.css")">
 </head>
