--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     <title>Title</title>
 </head>
 <body>
-    <awesome-app my-greeting="Your slim-js app works"></awesome-app>
+    <awesome-app my-greeting="Your slim-js / slix app works"></awesome-app>
 </body>
 </html>
