Change app title to "Exemplary real world application built with ReasonReact (ReasonML)"

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Exemplary real world application built with ReasonReact (ReasonML)</title>
+    <link rel="stylesheet" href="//demo.productionready.io/main.css">
   </head>
   <body>
     <noscript>
