pagination, article-list, article-preview

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Conduit - Slim.js</title>
+    <style>
+        *[click]:not(:disabled) {
+            cursor: pointer;
+        }
+        .article-count {
+            font-size: 80%;
+            padding-left: 0.5rem;
+            position: relative;
+        }
+    </style>
 </head>
 <body>
     <conduit-app></conduit-app>
