--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,13 @@
                 transition-delay: 2s;
                 transition-timing-function: cubic-bezier(.85, 0, .35, 1.58)
             }
+
+            [role="tab"] .ion-close-round {
+                cursor: pointer;
+                font-size: 0.5rem;
+                position: relative;
+                bottom: 0.05rem;
+            }
         </style>
     </head>
 
