--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 
     <head>
-        <script id="marked-lib" src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" async onload="__resolveMarkedReady()"></script>
+
+        <script id="marked-lib" src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" async onload="__resolveLibReady()"></script>
         <script>
             window._markedReady = new Promise((resolve) => {
-                window.__resolveMarkedReady = resolve
+                window.__resolveLibReady = function () {
+                    if (window.marked && window.Slim) {
+                        resolve()
+                    }
+                }
             })
         </script>
         <link rel="apple-touch-icon" sizes="57x57" href="./assets/apple-icon-57x57.png">
