--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     />
     <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
     <link rel="stylesheet" href="//demo.productionready.io/main.css" />
+    <link rel="stylesheet" href="src/styles/main.css" />
   </head>
   <body>
     <app-component></app-component>
