--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         </script>
 
         <script src="https://cdn.jsdelivr.net/npm/showdown@1.9.1/dist/showdown.min.js"></script>
-        <script src="../../src/Main.mjs" type="module"></script>
+        <script src="./node_modules/neo.mjs/src/Main.mjs" type="module"></script>
     </body>
 </html>
