index => Neo.config.basePath

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             Object.assign(Neo.config, {
                 appPath       : 'apps/realworld/app.mjs',
-                basePath      : '../../',
+                basePath      : './node_modules/neo.mjs/',
                 environment   : 'development',
                 isExperimental: true,
                 themes        : [],
