--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE HTML>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="UTF-8">
-        <title>Neo.mjs</title>
+        <title>neo.mjs</title>
     </head>
     <body>
+    <h2>Welcome to the neo.mjs Real World example app!</h2>
+    <p>For the best user experience, you need to use Chrome with the following browser flag<br/>
+        (copy the link into a new Chrome tab:</p>
+    <p>chrome://flags/#enable-experimental-web-platform-features</p>
+    <p>With this flag, it is possible to get the real JS module code into your browser, no builds required.</p>
     <ul>
         <li><a href="./apps/realworld/index.html">Realworld App</a></li>
         <li><a href="./dist/development/docs/index.html">Documentation</a></li>
+    </ul>
+    <p>Without the Chrome flag (or for other browsers like Firefox & Safari, you can use the webpack build versions:</p>
+    <ul>
+        <li><a href="./dist/development/apps/realworld/index.html">Realworld App (dist/development)</a></li>
+        <li><a href="./dist/production/apps/realworld/index.html">Realworld App (dist/production)</a></li>
+    </ul>
+    <p>neo.mjs apps get a source code documentation out of the box. The other examples are not included inside this repo.</p>
+    <ul>
+        <li><a href="./dist/development/docs/index.html">Real World app: Documentation</a></li>
+    </ul>
+    <p>For testing, neo.mjs is using the Bryntum testing suite "Siesta" (Chrome flag required)</p>
+    <ul>
+        <li><a href="./test/siesta/realworld/index.html">Real World app: Testing Harness</a></li>
     </ul>
     </body>
 </html>
