license file, index adjustment

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="./dist/development/apps/realworld/index.html">Realworld App (dist/development)</a></li>
         <li><a href="./dist/production/apps/realworld/index.html">Realworld App (dist/production)</a></li>
     </ul>
+    <h3>The following links will only work in a local environment (did not manage to publish the node_modules to gh-pages)</h3>
     <p>neo.mjs apps get a source code documentation out of the box. The other examples are not included inside this repo.</p>
     <ul>
         <li><a href="./dist/development/docs/index.html">Real World app: Documentation</a></li>
