index: adjusted the appPath

--- a/apps/realworld/index.html
+++ b/apps/realworld/index.html
@@ -14,7 +14,7 @@
             Neo = self.Neo || {}; Neo.config = Neo.config || {};
 
             Object.assign(Neo.config, {
-                appPath       : 'apps/realworld/app.mjs',
+                appPath       : '../../apps/realworld/app.mjs',
                 basePath      : '../../node_modules/neo.mjs/',
                 environment   : 'development',
                 isExperimental: true,
