readme & index update

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <body>
     <h2>Welcome to the neo.mjs Real World example app!</h2>
     <p>For the best user experience, you need to use Chrome with the following browser flag<br/>
-        (copy the link into a new Chrome tab:</p>
+        (copy the link into a new Chrome tab)</p>
     <p>chrome://flags/#enable-experimental-web-platform-features</p>
     <p>With this flag, it is possible to get the real JS module code into your browser, no builds required.</p>
+    <p>The flag won't be needed anymore with Chrome version 80 (probably January); already works without it in Canary.</p>
     <ul>
         <li><a href="./apps/realworld/index.html">Realworld App</a></li>
     </ul>
@@ -19,7 +20,7 @@
         <li><a href="./dist/development/apps/realworld/index.html">Realworld App (dist/development)</a></li>
         <li><a href="./dist/production/apps/realworld/index.html">Realworld App (dist/production)</a></li>
     </ul>
-    <h3>The following links will only work in a local environment (did not manage to publish the node_modules to gh-pages)</h3>
+
     <p>neo.mjs apps get a source code documentation out of the box. The other examples are not included inside this repo.</p>
     <ul>
         <li><a href="./dist/development/docs/index.html">Real World app: Documentation</a></li>
@@ -27,6 +28,10 @@
     <p>For testing, neo.mjs is using the Bryntum testing suite "Siesta" (Chrome flag required)</p>
     <ul>
         <li><a href="./test/siesta/realworld/index.html">Real World app: Testing Harness</a></li>
+    </ul>
+    <h2>More online examples are available here:</h2>
+    <ul>
+        <li><a href="https://neomjs.github.io/pages/">neo.mjs Online Examples</a></li>
     </ul>
     </body>
 </html>
