index.html: added the cayman theme

--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
-<!DOCTYPE HTML>
-<html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta charset="UTF-8">
-        <title>neo.mjs</title>
-    </head>
-    <body>
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+    <meta charset="UTF-8">
+    <title>neo.mjs | The webworkers driven UI framework</title>
+    <meta property="og:title" content="neo.mjs" />
+    <meta property="og:locale" content="en_US" />
+    <meta name="description" content="The webworkers driven UI framework" />
+    <meta property="og:description" content="The webworkers driven UI framework" />
+    <meta property="og:url" content="https://neomjs.github.io/pages/" />
+    <meta property="og:site_name" content="neo.mjs" />
+    <script type="application/ld+json">
+        {"@type":"WebSite","url":"https://neomjs.github.io/pages/","name":"neo.mjs","description":"The webworkers driven UI framework","headline":"neo.mjs","@context":"http://schema.org"}</script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#157878">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="stylesheet" href="./cayman/assets/css/style.css">
+</head>
+<body>
+<a id="skip-to-content" href="#content">Skip to the content.</a>
+
+<header class="page-header" role="banner">
+    <h1 class="project-name">neo.mjs</h1>
+    <h2 class="project-tagline">Conduit - Real World Example app</h2>
+
+    <a target="_blank" class="btn" href="https://github.com/neomjs/neomjs-realworld-example-app">View on GitHub</a>
+    <a target="_blank" class="btn" href="https://www.facebook.com/Neomjs-101788847886539/">Follow on Facebook</a>
+    <a target="_blank" class="btn" href="https://www.linkedin.com/company/26254666/">Follow on LinkedIn</a>
+    <a target="_blank" class="btn" href="https://twitter.com/UhligTobias">Follow on Twitter</a>
+</header>
+
+<main id="content" class="main-content" role="main">
     <h2>Welcome to the neo.mjs Real World example app!</h2>
     <p>For the best user experience, you need to use Chrome with the following browser flag<br/>
         (copy the link into a new Chrome tab)</p>
@@ -13,25 +38,26 @@
     <p>With this flag, it is possible to get the real JS module code into your browser, no builds required.</p>
     <p>The flag won't be needed anymore with Chrome version 80 (probably January); already works without it in Canary.</p>
     <ul>
-        <li><a href="./apps/realworld/index.html">Realworld App</a></li>
+        <li><a target="_blank" href="./apps/realworld/index.html">Realworld App</a></li>
     </ul>
     <p>Without the Chrome flag (or for other browsers like Firefox & Safari, you can use the webpack build versions:</p>
     <ul>
-        <li><a href="./dist/development/apps/realworld/index.html">Realworld App (dist/development)</a></li>
-        <li><a href="./dist/production/apps/realworld/index.html">Realworld App (dist/production)</a></li>
+        <li><a target="_blank" href="./dist/development/apps/realworld/index.html">Realworld App (dist/development)</a></li>
+        <li><a target="_blank" href="./dist/production/apps/realworld/index.html">Realworld App (dist/production)</a></li>
     </ul>
 
     <p>neo.mjs apps get a source code documentation out of the box. The other examples are not included inside this repo.</p>
     <ul>
-        <li><a href="./dist/development/docs/index.html">Real World app: Documentation</a></li>
+        <li><a target="_blank" href="./dist/development/docs/index.html">Real World app: Documentation</a></li>
     </ul>
     <p>For testing, neo.mjs is using the Bryntum testing suite "Siesta" (Chrome flag required)</p>
     <ul>
-        <li><a href="./test/siesta/realworld/index.html">Real World app: Testing Harness</a></li>
+        <li><a target="_blank" href="./test/siesta/realworld/index.html">Real World app: Testing Harness</a></li>
     </ul>
-    <h2>More online examples are available here:</h2>
+    <h2>Hosted online examples are available here:</h2>
     <ul>
-        <li><a href="https://neomjs.github.io/pages/">neo.mjs Online Examples</a></li>
+        <li><a target="_blank" href="https://neomjs.github.io/pages/">neo.mjs Online Examples</a></li>
     </ul>
-    </body>
+</main>
+</body>
 </html>
