index buttons adjustments, removed travis.yml

--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
     <h1 class="project-name">neo.mjs</h1>
     <h2 class="project-tagline">Conduit - Real World Example app</h2>
 
-    <a target="_blank" class="btn" href="https://github.com/neomjs/neomjs-realworld-example-app">View on GitHub</a>
-    <a target="_blank" class="btn" href="https://www.facebook.com/Neomjs-101788847886539/">Follow on Facebook</a>
-    <a target="_blank" class="btn" href="https://www.linkedin.com/company/26254666/">Follow on LinkedIn</a>
-    <a target="_blank" class="btn" href="https://twitter.com/UhligTobias">Follow on Twitter</a>
+    <a target="_blank" class="btn" href="https://github.com/neomjs/neomjs-realworld-example-app">App repo on GitHub</a>
+    <a target="_blank" class="btn" href="https://github.com/neomjs/neo">neo.mjs repo on GitHub</a>
 </header>
 
 <main id="content" class="main-content" role="main">
