Add global configuration to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,11 @@
     />
     <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
     <link rel="stylesheet" href="//demo.productionready.io/main.css" />
+    <script>
+      window.app = {
+        backend: 'https://conduit.productionready.io/api',
+      };
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
