Add bs-fetch library and first basic hook

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="//demo.productionready.io/main.css" />
     <script>
       window.app = {
-        backend: 'https://conduit.productionready.io/api',
+        backend: 'https://conduit.productionready.io',
       };
     </script>
   </head>
