Add async attribute to stylesheet tags

--- a/public/index.html
+++ b/public/index.html
@@ -27,14 +27,16 @@
       href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
       rel="stylesheet"
       type="text/css"
+      async
     />
     <link
       href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic"
       rel="stylesheet"
       type="text/css"
+      async
     />
     <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
-    <link rel="stylesheet" href="//demo.productionready.io/main.css" />
+    <link rel="stylesheet" href="//demo.productionready.io/main.css" async />
     <script>
       window.app = {
         backend: 'https://conduit.productionready.io',
@@ -57,7 +59,7 @@
         border: 3px solid #fff;
         border-radius: 50%;
         animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-        border-color: #BDBDBD transparent transparent transparent;
+        border-color: #bdbdbd transparent transparent transparent;
       }
       .lds-ring div:nth-child(1) {
         animation-delay: -0.45s;
