--- a/public/index.html
+++ b/public/index.html
@@ -27,16 +27,16 @@
       href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
       rel="stylesheet"
       type="text/css"
-      async
+      prelode
     />
     <link
       href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic"
       rel="stylesheet"
       type="text/css"
-      async
+      prelode
     />
     <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
-    <link rel="stylesheet" href="//demo.productionready.io/main.css" async />
+    <link rel="stylesheet" href="//demo.productionready.io/main.css" prelode />
     <script>
       window.app = {
         backend: 'https://conduit.productionready.io',
