--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang=en>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event Driven Vanilla JS Web Components</title>
+  <meta http-equiv=refresh content="0; url=./src/index.html">
+  <title>Conduit</title>
 </head>
-<body>
-    <p>Some code is going to follow soon...</p>
-</body>
+<body></body>
 </html>
