--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang=en>
 <head>
-  <meta charset=UTF-8>
-  <meta http-equiv=X-UA-Compatible content="IE=Edge">
-  <meta name=viewport content="width=device-width, initial-scale=1">
-  <link href=//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css rel=stylesheet type=text/css>
-  <link href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic" rel=stylesheet type=text/css>
-  <link href="//demo.productionready.io/main.css" rel=stylesheet type=text/css>
+  <meta charset="utf-8">
   <title>Conduit</title>
+  <!-- Import Ionicon icons & Google Fonts our Bootstrap theme relies on -->
+  <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
+  <link href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
+  <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
+  <link rel="stylesheet" href="//demo.productionready.io/main.css">
+</head>
+<body>
+  <o-header mode=false></o-header>
+  <c-router mode=false></c-router>
+  <o-footer mode=false></o-footer>
   <script rel=preload type=module>
     /**
-     * All controllers, pages and first level organisms are loaded and defined here, see body html tags below
+     * All controllers and first level organisms are loaded and defined here
      */
     Promise.all([
       // Helpers
-      import('./es/helpers/Environment.js').then(module => null)
+      import('./es/helpers/Environment.js').then(module => null),
+      // Controllers
+      import('./es/components/controllers/Router.js').then(module => ['c-router', module.default]),
+      // Components which are not effected by routing
+      import('./es/components/organisms/Header.js').then(module => ['o-header', module.default]),
+      import('./es/components/organisms/Footer.js').then(module => ['o-footer', module.default])
     ]).then(elements => elements.forEach(element => {
       if (element) customElements.define(...element)
       console.log('test api: ', Environment.fetchBaseUrl);
@@ -28,6 +38,5 @@
       })
     }))
   </script>
-</head>
-<body></body>
+</body>
 </html>
