--- a/src/index.html
+++ b/src/index.html
@@ -20,12 +20,14 @@
     Promise.all([
       // Helpers
       import('./es/helpers/Environment.js').then(module => null),
+      import('./es/helpers/Debugging.js').then(module => null),
       // Controllers
       import('./es/components/controllers/Router.js').then(module => ['c-router', module.default]),
       // Components which are not effected by routing
       import('./es/components/organisms/Header.js').then(module => ['o-header', module.default]),
       import('./es/components/organisms/Footer.js').then(module => ['o-footer', module.default])
     ]).then(elements => elements.forEach(element => {
+      // don't define already existing customElements
       if (element && !customElements.get(element[0])) customElements.define(...element)
     }))
   </script>
