added and improved tests
Signed-off-by: Silvan Struebi <silvan.struebi@gmail.com>

--- a/test/index.html
+++ b/test/index.html
@@ -68,8 +68,14 @@
     // load tests
     import '../src/es/helpers/Environment.js'
     import '../src/es/helpers/Debugging.js'
+    import {test as routerTest} from './es/tests/components/controllers/Router.js'
+    import {test as homeTest} from './es/tests/components/pages/Home.js'
+    import {test as listArticlesTest} from './es/tests/components/controllers/ListArticles.js'
     import {test as headerTest} from './es/tests/components/organisms/Header.js'
     import {test as footerTest} from './es/tests/components/organisms/Footer.js'
+    routerTest()
+    homeTest()
+    listArticlesTest()
     headerTest()
     footerTest()
   </script>
