--- a/test/index.html
+++ b/test/index.html
@@ -69,19 +69,23 @@
     import '../src/es/helpers/Environment.js'
     import '../src/es/helpers/Debugging.js'
     import {test as routerTest} from './es/tests/components/controllers/Router.js'
-    import {test as homeTest} from './es/tests/components/pages/Home.js'
     import {test as listArticlesTest} from './es/tests/components/controllers/ListArticles.js'
+    import {test as getTagsTest} from './es/tests/components/controllers/GetTags.js'
+    import {test as homeTest} from './es/tests/components/pages/Home.js'
     import {test as headerTest} from './es/tests/components/organisms/Header.js'
     import {test as footerTest} from './es/tests/components/organisms/Footer.js'
+    import {test as articlePreviewTest} from './es/tests/components/molecules/ArticlePreview.js'
     const timeoutID = setTimeout(() => {
       document.title += ' - TIMEOUT!'
     }, 10000);
     Promise.all([
       routerTest(),
-      homeTest(),
       listArticlesTest(),
+      getTagsTest(),
+      homeTest(),
       headerTest(),
-      footerTest()
+      footerTest(),
+      articlePreviewTest()
     ]).then(results => {
       let counter = 0
       let passedCounter = 0
