--- a/test/index.html
+++ b/test/index.html
@@ -77,6 +77,7 @@
     import {test as articlePreviewTest} from './es/tests/components/molecules/ArticlePreview.js'
     const timeoutID = setTimeout(() => {
       document.title += ' - TIMEOUT!'
+      document.body.classList.add('failed')
     }, 10000);
     Promise.all([
       routerTest(),
