--- a/test/index.html
+++ b/test/index.html
@@ -75,6 +75,7 @@
     import {test as headerTest} from './es/tests/components/organisms/Header.js'
     import {test as footerTest} from './es/tests/components/organisms/Footer.js'
     import {test as articlePreviewTest} from './es/tests/components/molecules/ArticlePreview.js'
+    import {test as articleFeedToggleTest} from './es/tests/components/molecules/ArticleFeedToggle.js'
     const timeoutID = setTimeout(() => {
       document.title += ' - TIMEOUT!'
       document.body.classList.add('failed')
@@ -86,7 +87,8 @@
       homeTest(),
       headerTest(),
       footerTest(),
-      articlePreviewTest()
+      articlePreviewTest(),
+      articleFeedToggleTest()
     ]).then(results => {
       let counter = 0
       let passedCounter = 0
