--- a/test/index.html
+++ b/test/index.html
@@ -74,6 +74,7 @@
     import {test as homeTest} from './es/tests/components/pages/Home.js'
     import {test as headerTest} from './es/tests/components/organisms/Header.js'
     import {test as footerTest} from './es/tests/components/organisms/Footer.js'
+    import {test as listArticlePreviewsTest} from './es/tests/components/organisms/ListArticlePreviews.js'
     import {test as articlePreviewTest} from './es/tests/components/molecules/ArticlePreview.js'
     import {test as articleFeedToggleTest} from './es/tests/components/molecules/ArticleFeedToggle.js'
     import {test as paginationTest} from './es/tests/components/molecules/Pagination.js'
@@ -89,6 +90,7 @@
       homeTest(),
       headerTest(),
       footerTest(),
+      listArticlePreviewsTest(),
       articlePreviewTest(),
       articleFeedToggleTest(),
       paginationTest(),
