--- a/apps/conduit/src/index.html
+++ b/apps/conduit/src/index.html
@@ -6,11 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <!-- Import Ionicon icons & Google Fonts our Bootstrap theme relies on -->
-    <link
-      href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <link href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
     <link
       href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic"
       rel="stylesheet"
@@ -20,6 +16,7 @@
     <link rel="stylesheet" href="//demo.productionready.io/main.css" />
     <meta charset="utf-8" />
   </head>
+
   <body>
     <app-root></app-root>
   </body>
