--- a/libs/login/src/lib/login.page.html
+++ b/libs/login/src/lib/login.page.html
@@ -7,18 +7,27 @@
           <a [routerLink]="['/sign-up']">Need an account?</a>
         </p>
 
-        <ul class="error-messages">
-          <li>That email is already taken</li>
+        <ul *ngIf="errors$ | async; let errors" class="error-messages">
+          <li *ngFor="let error of errors">{{error}}</li>
         </ul>
 
-        <form>
+        <form [formGroup]="form">
           <fieldset class="form-group">
-            <input class="form-control form-control-lg" type="text" placeholder="Username" />
+            <input class="form-control form-control-lg" type="text" placeholder="Username" formControlName="email" />
           </fieldset>
           <fieldset class="form-group">
-            <input class="form-control form-control-lg" type="password" placeholder="Password" />
+            <input
+              class="form-control form-control-lg"
+              type="password"
+              placeholder="Password"
+              formControlName="password"
+            />
           </fieldset>
-          <button class="btn btn-lg btn-primary pull-xs-right">
+          <button
+            [disabled]="form.invalid || form.disabled"
+            (click)="login()"
+            class="btn btn-lg btn-primary pull-xs-right"
+          >
             Sign in
           </button>
         </form>
