--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,13 @@
 <body>
 
   <c-user>
-    <o-header></o-header>
-    <c-router></c-router>
-    <o-footer></o-footer>
+    <c-article>
+      <o-header></o-header>
+      <c-router></c-router>
+      <o-footer></o-footer>
+    </c-article>
   </c-user>
+  
   <script rel=preload type=module>
     /**
      * First level controllers and organisms are loaded and defined here (loadChildComponents)
@@ -27,6 +30,7 @@
       // Controllers
       import('./es/components/controllers/Router.js').then(module => ['c-router', module.default]),
       import('./es/components/controllers/User.js').then(module => ['c-user', module.default]),
+      import('./es/components/controllers/GetArticle.js').then(module => ['c-article', module.default]),
       // Components which are not effected by routing
       import('./es/components/organisms/Header.js').then(module => ['o-header', module.default]),
       import('./es/components/organisms/Footer.js').then(module => ['o-footer', module.default])
