refactor: rename Favorite controller to MetaActions

--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,11 @@
 
   <c-user>
       <c-article>
-        <c-favorite>
+        <c-meta-actions>
           <o-header></o-header>
           <c-router></c-router>
           <o-footer></o-footer>
-      </c-favorite>
+      </c-meta-actions>
     </c-article>
   </c-user>
 
@@ -33,7 +33,7 @@
       import('./es/components/controllers/Router.js').then(module => ['c-router', module.default]),
       import('./es/components/controllers/User.js').then(module => ['c-user', module.default]),
       import('./es/components/controllers/Article.js').then(module => ['c-article', module.default]),
-      import('./es/components/controllers/Favorite.js').then(module => ['c-favorite', module.default]),
+      import('./es/components/controllers/MetaActions.js').then(module => ['c-meta-actions', module.default]),
       // Components which are not effected by routing
       import('./es/components/organisms/Header.js').then(module => ['o-header', module.default]),
       import('./es/components/organisms/Footer.js').then(module => ['o-footer', module.default])
