feat: make navbar conduit

--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -10,7 +10,6 @@
     <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
     <link rel="stylesheet" href="//demo.productionready.io/main.css">
 </head>
-<body>
-    <div id="elmish-app"></div>
+<body id="elmish-app">
 </body>
 </html>
