feat: login page

--- a/src/Client/index.html
+++ b/src/Client/index.html
@@ -10,6 +10,6 @@
     <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
     <link rel="stylesheet" href="//demo.productionready.io/main.css">
 </head>
-<body id="elmish-app">
+<body id="root">
 </body>
 </html>
