feat: update SAFE-stack v3 to v4

--- a/tests/Client/index.html
+++ b/tests/Client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>realworld_starter_kit Client Tests</title>
+        <title>safestack_realworld_example_app Client Tests</title>
     </head>
     <body>
 
